adding error handling and reset password
